--- a/app/src/main/res/layout/food_stat_layout.xml
+++ b/app/src/main/res/layout/food_stat_layout.xml
@@ -10,8 +10,8 @@
 
     <FrameLayout
             android:id="@+id/framelayout_food_stat"
-            android:layout_width="90dp"
-            android:layout_height="90dp">
+            android:layout_width="100dp"
+            android:layout_height="100dp">
 
         <com.mikhaellopez.circularimageview.CircularImageView
                 android:layout_width="90dp"
@@ -28,8 +28,8 @@
                 android:layout_gravity="center"/>
 
         <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:src="@android:color/white"
                 app:civ_border_width="0dp"
@@ -37,8 +37,8 @@
 
         <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/food_image"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:scaleType="centerInside"
                 app:civ_border_width="0dp"
@@ -48,9 +48,11 @@
 
     <TextView
             android:id="@+id/title_food"
-            android:layout_width="70dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollHorizontally="false"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:gravity="center"
             android:maxLines="2"
             android:layout_marginTop="5dp"/>
