--- a/app/src/main/res/layout/fragment_stat_detail.xml
+++ b/app/src/main/res/layout/fragment_stat_detail.xml
@@ -67,11 +67,6 @@
                 android:layout_marginEnd="10dp"
                 android:background="#c0c0c0"/>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/chronology"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
         <!--CHRONOLOGY-->
         <LinearLayout
                 android:layout_width="match_parent"
@@ -103,7 +98,10 @@
 
                 </RelativeLayout>
 
-
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/chronology"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
@@ -136,23 +134,23 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="10dp"
                 android:background="#c0c0c0"/>
-
+<!--
     <ScrollView
             tools:context=".Controllers.Fragments.StatDetailFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fillViewport="true">
-
+-->
     <!--DETAIL PER FOOD-->
     <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/barchart_detail_per_food"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="400dp"/>
 
 
-
-    </ScrollView>
-
+    <!--
+        </ScrollView>
+            -->
     <View
             android:layout_width="match_parent"
             android:layout_height="100dp" />
