--- a/app/src/main/res/layout/stat_chrono_viewholder.xml
+++ b/app/src/main/res/layout/stat_chrono_viewholder.xml
@@ -2,21 +2,22 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:minWidth="80dp"
         android:layout_marginStart="1dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
     <TextView
-        android:id="@+id/month_text"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+            android:id="@+id/month_text"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     <GridView
-        android:id="@+id/grid_month"
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:horizontalSpacing="1dp"
-        android:verticalSpacing="1dp"/>
+            android:id="@+id/grid_month"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:horizontalSpacing="1dp"
+            android:verticalSpacing="1dp"/>
 
 </LinearLayout>
