--- a/app/src/main/res/menu/menu_toolbar_pick.xml
+++ b/app/src/main/res/menu/menu_toolbar_pick.xml
@@ -2,11 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
+      tools:context=".PickActivity">
 
     <item
-            android:id="@+id/action_settings"
-            android:icon="@drawable/baseline_settings_white_24"
+            android:id="@+id/action_search"
+            android:icon="@drawable/baseline_zoom"
+            app:actionViewClass="android.support.v7.widget.SearchView"
             app:showAsAction="ifRoom"
             android:title=""/>
 
