--- a/app/src/main/res/layout/food_stat_layout.xml
+++ b/app/src/main/res/layout/food_stat_layout.xml
@@ -3,23 +3,15 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="3dp"
         android:id="@+id/linearlayout_food_stat"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical">
 
     <FrameLayout
             android:id="@+id/framelayout_food_stat"
-            android:layout_width="100dp"
-            android:layout_height="100dp">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center"
-                android:src="@android:color/white"
-                app:civ_border_width="0dp"
-                app:civ_shadow="false"/>
+            android:layout_width="90dp"
+            android:layout_height="90dp">
 
         <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/piechart_around_circle"
@@ -28,18 +20,18 @@
                 android:layout_gravity="center"/>
 
         <com.mikhaellopez.circularimageview.CircularImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center"
-                android:src="@android:color/white"
-                app:civ_border_width="0dp"
-                app:civ_shadow="false"/>
+                android:scaleType="centerInside"
+                android:src="@drawable/circle_white"/>
 
         <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/food_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
+                android:padding="5dp"
                 android:scaleType="centerInside"
                 app:civ_border_width="0dp"
                 app:civ_shadow="false"/>
