--- a/app/src/main/res/layout/pick_event_layout.xml
+++ b/app/src/main/res/layout/pick_event_layout.xml
@@ -2,8 +2,7 @@
 <FrameLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
-         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+         android:layout_height="match_parent">
 
     <GridView
             android:id="@+id/gridview_event"
@@ -12,6 +11,7 @@
             android:numColumns="3"
             android:verticalSpacing="5dp"
             android:horizontalSpacing="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="100dp"/>
 
     <!-- TRANSPARENT GRADIENT VIEW -->
