--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -2,7 +2,9 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="20dp">
 
     <TextView
         android:id="@+id/title_settings"
@@ -63,6 +65,7 @@
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                android:background="@null"
                 android:src="@drawable/excel"/>
 
     </LinearLayout>
@@ -89,6 +92,7 @@
                 android:id="@+id/button_reset"
                 android:layout_width="0dp"
                 android:layout_weight="2"
+                android:background="@null"
                 android:layout_height="wrap_content"
                 android:text="@string/reset"
                 android:layout_marginStart="10dp"/>
